src/test/ui/associated-types/issue-36499.stderr
error: Rust has no postfix increment operator
  --> $DIR/issue-36499.rs:4:7
   |
LL |     2 + +2;
   |       ^^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp = 2 ; 2 += 1; tmp }2;
   |     +++++++++++   ~~~~~~~~~~~~~~~
help: or, if you don't need to use it as an expression, change it to this
   |
LL -     2 + +2;
LL +     2  += 12;
   | 

error: aborting due to previous error

