src/test/ui/associated-types/issue-36499.rs
// error-pattern: aborting due to previous error

fn main() {
    2 + +2;
}
